--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   # Test on macOS with latest Xcode (newest runner)
   test-macos-latest:
-    name: macOS (Xcode 15.2, Swift 6.1)
+    name: macOS (Xcode 15.2)
     runs-on: macos-14
 
     steps:
@@ -18,11 +18,6 @@ jobs:
 
       - name: Select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
-
-      - name: Install Swift 6.1.2
-        uses: SwiftyLab/setup-swift@v1
-        with:
-          swift-version: "6.1.2"
 
       - name: Show Xcode version
         run: xcodebuild -version
@@ -120,7 +115,7 @@ jobs:
 
   # Build and test CLI tool
   test-cli:
-    name: CLI Tool Tests (Swift 6.1)
+    name: CLI Tool Tests
     runs-on: macos-14
 
     steps:
@@ -129,11 +124,6 @@ jobs:
 
       - name: Select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
-
-      - name: Install Swift 6.1
-        uses: SwiftyLab/setup-swift@v1
-        with:
-          swift-version: "6.1"
 
       - name: Build CLI tool
         run: swift build -c release --product SwiftZlibCLI
@@ -167,7 +157,7 @@ jobs:
 
   # Performance benchmarks
   benchmark:
-    name: Performance Benchmarks (Swift 6.1)
+    name: Performance Benchmarks
     runs-on: macos-14
 
     steps:
@@ -176,11 +166,6 @@ jobs:
 
       - name: Select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
-
-      - name: Install Swift 6.1
-        uses: SwiftyLab/setup-swift@v1
-        with:
-          swift-version: "6.1"
 
       - name: Run performance tests
         run: |
@@ -191,7 +176,7 @@ jobs:
 
   # Code quality checks
   code-quality:
-    name: Code Quality (Swift 6.1)
+    name: Code Quality
     runs-on: macos-14
 
     steps:
@@ -200,11 +185,6 @@ jobs:
 
       - name: Select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
-
-      - name: Install Swift 6.1
-        uses: SwiftyLab/setup-swift@v1
-        with:
-          swift-version: "6.1"
 
       - name: Install Python
         uses: actions/setup-python@v5
