--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -8,8 +8,11 @@ on:
 
 jobs:
   test-windows:
-    name: Windows (Swift 5.9)
+    name: Windows (Swift ${{ matrix.swift-version }})
     runs-on: windows-2022
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
 
     steps:
       - name: Checkout
@@ -18,7 +21,7 @@ jobs:
       - name: Install Swift
         uses: SwiftyLab/setup-swift@v1
         with:
-          swift-version: "5.9"
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Verify Swift installation
         run: |
@@ -53,6 +56,7 @@ jobs:
     strategy:
       matrix:
         configuration: [debug, release]
+        swift-version: [5.9, 6.1.2]
     runs-on: windows-2022
     steps:
       - name: Checkout
@@ -61,7 +65,7 @@ jobs:
       - name: Install Swift
         uses: SwiftyLab/setup-swift@v1
         with:
-          swift-version: "5.9"
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Build and test package
         run: |
@@ -73,6 +77,9 @@ jobs:
   # Performance benchmarks - Windows
   benchmark-windows:
     name: Performance Benchmarks (Windows)
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
     runs-on: windows-2022
 
     steps:
@@ -82,7 +89,7 @@ jobs:
       - name: Install Swift
         uses: SwiftyLab/setup-swift@v1
         with:
-          swift-version: "5.9"
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Run performance tests
         run: |
