ci: Show both Swift version and configuration in build verification job names\n\n- Update build verification job names for macOS, Linux, and Windows to include both Swift version and configuration (debug/release)\n- Improves CI clarity and makes it easy to distinguish jobs in the UI

--- a/.github/workflows/test-windows.yml
+++ b/.github/workflows/test-windows.yml
@@ -52,7 +52,7 @@ jobs:
 
   # Build verification - Windows
   build-verification-windows:
-    name: Build Verification (Windows)
+    name: Build Verification (Windows, Swift ${{ matrix.swift-version }}, ${{ matrix.configuration }})
     strategy:
       matrix:
         configuration: [debug, release]
