--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,8 +9,11 @@ on:
 jobs:
   # Test on macOS with latest Xcode (newest runner)
   test-macos-latest:
-    name: macOS (Xcode 15.2)
+    name: macOS (Xcode 15.2, Swift ${{ matrix.swift-version }})
     runs-on: macos-14
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
 
     steps:
       - name: Checkout
@@ -18,6 +21,11 @@ jobs:
 
       - name: Select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
+
+      - name: Install Swift ${{ matrix.swift-version }}
+        uses: SwiftyLab/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Show Xcode version
         run: xcodebuild -version
@@ -43,8 +51,11 @@ jobs:
 
   # Test on Linux (Ubuntu)
   test-linux:
-    name: Linux (Ubuntu 24.04, Swift 5.10.1)
+    name: Linux (Ubuntu 24.04, Swift ${{ matrix.swift-version }})
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
 
     steps:
       - name: Checkout
@@ -53,43 +64,7 @@ jobs:
       - name: Install Swift
         uses: SwiftyLab/setup-swift@v1
         with:
-          swift-version: "5.10.1"
-
-      - name: Show Swift version
-        run: swift --version
-
-      - name: Install zlib development headers
-        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev
-
-      - name: Build package
-        run: swift build
-
-      - name: Run all tests
-        run: swift test --verbose
-
-      - name: Run specific test groups
-        run: |
-          swift test --filter CoreTests
-          swift test --filter ExtensionsTests
-          swift test --filter FileOperationsTests
-          swift test --filter PerformanceTests
-          swift test --filter ErrorHandlingTests
-          swift test --filter StreamingTests
-          swift test --filter ConcurrencyTests
-
-  # Test on Linux (Ubuntu) with latest Swift
-  test-linux-latest:
-    name: Linux (Ubuntu 24.04, Swift 5.10.1)
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Install Swift
-        uses: SwiftyLab/setup-swift@v1
-        with:
-          swift-version: "5.10.1"
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Show Swift version
         run: swift --version
@@ -115,8 +90,11 @@ jobs:
 
   # Build and test CLI tool
   test-cli:
-    name: CLI Tool Tests
+    name: CLI Tool Tests (Swift ${{ matrix.swift-version }})
     runs-on: macos-14
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
 
     steps:
       - name: Checkout
@@ -124,6 +102,11 @@ jobs:
 
       - name: Select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
+
+      - name: Install Swift ${{ matrix.swift-version }}
+        uses: SwiftyLab/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Build CLI tool
         run: swift build -c release --product SwiftZlibCLI
@@ -157,8 +140,11 @@ jobs:
 
   # Performance benchmarks
   benchmark:
-    name: Performance Benchmarks
+    name: Performance Benchmarks (Swift ${{ matrix.swift-version }})
     runs-on: macos-14
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
 
     steps:
       - name: Checkout
@@ -166,6 +152,11 @@ jobs:
 
       - name: Select Xcode
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
+
+      - name: Install Swift ${{ matrix.swift-version }}
+        uses: SwiftyLab/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Run performance tests
         run: |
@@ -255,10 +246,11 @@ jobs:
 
   # Build verification - macOS
   build-verification-macos:
-    name: Build Verification (macOS)
+    name: Build Verification (macOS, Swift ${{ matrix.swift-version }}, ${{ matrix.configuration }})
     strategy:
       matrix:
         configuration: [debug, release]
+        swift-version: [5.9, 6.1.2]
     runs-on: macos-14
     steps:
       - name: Checkout
@@ -266,6 +258,11 @@ jobs:
 
       - name: Setup environment (macOS)
         run: sudo xcode-select -switch /Applications/Xcode_15.2.app
+
+      - name: Install Swift ${{ matrix.swift-version }}
+        uses: SwiftyLab/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Install zlib (macOS)
         run: brew install zlib
@@ -281,10 +278,11 @@ jobs:
 
   # Build verification - Linux
   build-verification-linux:
-    name: Build Verification (Linux)
+    name: Build Verification (Linux, Swift ${{ matrix.swift-version }}, ${{ matrix.configuration }})
     strategy:
       matrix:
         configuration: [debug, release]
+        swift-version: [5.9, 6.1.2]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -293,7 +291,7 @@ jobs:
       - name: Install Swift
         uses: SwiftyLab/setup-swift@v1
         with:
-          swift-version: "5.10.1"
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Install zlib (Linux)
         run: sudo apt-get update && sudo apt-get install -y zlib1g-dev
@@ -324,8 +322,11 @@ jobs:
           make clean all run
 
   memory-leak-linux:
-    name: Linux Memory Leak Test (MemoryLeakTests only)
+    name: Linux Memory Leak Test (Swift ${{ matrix.swift-version }})
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
 
     steps:
       - name: Checkout
@@ -334,7 +335,7 @@ jobs:
       - name: Install Swift
         uses: SwiftyLab/setup-swift@v1
         with:
-          swift-version: "5.10.1"
+          swift-version: ${{ matrix.swift-version }}
 
       - name: Show Swift version
         run: swift --version
