--- a/.github/workflows/build-verification.yml
+++ b/.github/workflows/build-verification.yml
@@ -24,14 +24,35 @@ jobs:
     name: Build Verification (${{ inputs.platform }}, Swift ${{ inputs.swift-version }}, ${{ inputs.configuration }})
     runs-on: ${{ inputs.platform == 'macos' && 'macos-14' || inputs.platform == 'linux' && 'ubuntu-latest' || 'windows-2022' }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Swift Environment
-        uses: ./.github/actions/setup-swift
+        uses: SwiftyLab/setup-swift@v1
         with:
           swift-version: ${{ inputs.swift-version }}
-          platform: ${{ inputs.platform }}
 
-      - name: Build and Test
-        uses: ./.github/actions/run-tests
-        with:
-          configuration: ${{ inputs.configuration }}
-          run-all-tests: "true"
+      - name: Setup macOS Dependencies
+        if: inputs.platform == 'macos'
+        shell: bash
+        run: |
+          sudo xcode-select -switch /Applications/Xcode_15.2.app
+          brew install zlib
+
+      - name: Setup Linux Dependencies
+        if: inputs.platform == 'linux'
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get install -y zlib1g-dev
+
+      - name: Build package
+        shell: bash
+        run: swift build -c ${{ inputs.configuration }}
+
+      - name: Run all tests
+        shell: bash
+        run: swift test -c ${{ inputs.configuration }} --verbose
+
+      - name: Build CLI tool
+        shell: bash
+        run: swift build -c ${{ inputs.configuration }} --product SwiftZlibCLI
