--- a/.github/workflows/unified-tests.yml
+++ b/.github/workflows/unified-tests.yml
@@ -21,17 +21,34 @@ jobs:
             swift-version: 5.9
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Swift Environment
-        uses: ./.github/actions/setup-swift
+        uses: SwiftyLab/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift-version }}
-          platform: ${{ matrix.platform }}
 
-      - name: Run Tests
-        uses: ./.github/actions/run-tests
-        with:
-          configuration: "debug"
-          run-all-tests: "true"
+      - name: Setup macOS Dependencies
+        if: matrix.platform == 'macos'
+        shell: bash
+        run: |
+          sudo xcode-select -switch /Applications/Xcode_15.2.app
+          brew install zlib
+
+      - name: Setup Linux Dependencies
+        if: matrix.platform == 'linux'
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get install -y zlib1g-dev
+
+      - name: Build package
+        shell: bash
+        run: swift build -c debug
+
+      - name: Run all tests
+        shell: bash
+        run: swift test -c debug --verbose
 
   # CLI Tool Tests
   test-cli:
@@ -46,11 +63,26 @@ jobs:
             swift-version: 5.9
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Swift Environment
-        uses: ./.github/actions/setup-swift
+        uses: SwiftyLab/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift-version }}
-          platform: ${{ matrix.platform }}
+
+      - name: Setup macOS Dependencies
+        if: matrix.platform == 'macos'
+        shell: bash
+        run: |
+          sudo xcode-select -switch /Applications/Xcode_15.2.app
+          brew install zlib
+
+      - name: Setup Linux Dependencies
+        if: matrix.platform == 'linux'
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get install -y zlib1g-dev
 
       - name: Build CLI tool (Unix)
         if: matrix.platform != 'windows'
@@ -130,11 +162,26 @@ jobs:
         swift-version: [6.1.2] # Only test latest for performance
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Swift Environment
-        uses: ./.github/actions/setup-swift
+        uses: SwiftyLab/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift-version }}
-          platform: ${{ matrix.platform }}
+
+      - name: Setup macOS Dependencies
+        if: matrix.platform == 'macos'
+        shell: bash
+        run: |
+          sudo xcode-select -switch /Applications/Xcode_15.2.app
+          brew install zlib
+
+      - name: Setup Linux Dependencies
+        if: matrix.platform == 'linux'
+        shell: bash
+        run: |
+          sudo apt-get update && sudo apt-get install -y zlib1g-dev
 
       - name: Run Performance Tests (Unix)
         if: matrix.platform != 'windows'
