ci: fix Memory Leak Tests to use public SwiftyLab/setup-swift action and add checkout step

--- a/.github/workflows/unified-tests.yml
+++ b/.github/workflows/unified-tests.yml
@@ -210,11 +210,13 @@ jobs:
         swift-version: [5.9, 6.1.2]
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Swift Environment
-        uses: ./.github/actions/setup-swift
+        uses: SwiftyLab/setup-swift@v1
         with:
           swift-version: ${{ matrix.swift-version }}
-          platform: linux
 
       - name: Run Memory Leak Tests
         run: swift test --filter MemoryLeakTests --verbose
