--- a/.github/workflows/unified-tests.yml
+++ b/.github/workflows/unified-tests.yml
@@ -134,23 +134,25 @@ jobs:
           .build/release/SwiftZlibCLI info
 
           # Create test file in a writable location
-          echo "test data for SwiftZlib CLI testing" > /tmp/test.txt
+          echo "test data for SwiftZlib CLI testing" > $env:TEMP\test.txt
 
           # Test compression
-          .build/release/SwiftZlibCLI compress /tmp/test.txt /tmp/test.txt.gz
+          .build/release/SwiftZlibCLI compress $env:TEMP\test.txt $env:TEMP\test.txt.gz
 
           # Test decompression
-          .build/release/SwiftZlibCLI decompress /tmp/test.txt.gz /tmp/test_decompressed.txt
+          .build/release/SwiftZlibCLI decompress $env:TEMP\test.txt.gz $env:TEMP\test_decompressed.txt
 
           # Verify round-trip
-          diff /tmp/test.txt /tmp/test_decompressed.txt
+          Compare-Object (Get-Content $env:TEMP\test.txt) (Get-Content $env:TEMP\test_decompressed.txt)
 
           # Show file sizes for debugging
           echo "File sizes:"
-          ls -la /tmp/test*.txt*
+          Get-ChildItem $env:TEMP\test*.txt* | Select-Object Name, Length
 
           # Clean up
-          rm -f /tmp/test.txt /tmp/test.txt.gz /tmp/test_decompressed.txt
+          Remove-Item -Force $env:TEMP\test.txt -ErrorAction SilentlyContinue
+          Remove-Item -Force $env:TEMP\test.txt.gz -ErrorAction SilentlyContinue
+          Remove-Item -Force $env:TEMP\test_decompressed.txt -ErrorAction SilentlyContinue
 
   # Performance Tests (only latest Swift version)
   performance:
