--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,59 @@ jobs:
           swift test --filter StreamingTests
           swift test --filter ConcurrencyTests
 
+  # Test on iOS Simulator
+  test-ios:
+    name: iOS (Xcode 15.2, Swift ${{ matrix.swift-version }})
+    runs-on: macos-14
+    strategy:
+      matrix:
+        swift-version: [5.9, 6.1.2]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Select Xcode
+        run: sudo xcode-select -switch /Applications/Xcode_15.2.app
+
+      - name: Install Swift ${{ matrix.swift-version }}
+        uses: SwiftyLab/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift-version }}
+
+      - name: Show Xcode version
+        run: xcodebuild -version
+
+      - name: Show Swift version
+        run: swift --version
+
+      - name: List available simulators
+        run: xcrun simctl list devices
+
+      - name: Build for iOS
+        run: swift build -Xswiftc -sdk -Xswiftc $(xcrun --sdk iphonesimulator --show-sdk-path) -Xswiftc -target -Xswiftc arm64-apple-ios13.0-simulator
+
+      - name: Test on iOS Simulator
+        run: |
+          # Get the first available iPhone simulator
+          SIMULATOR=$(xcrun simctl list devices available | grep "iPhone" | head -1 | sed 's/.*(\([^)]*\)).*/\1/')
+          echo "Using simulator: $SIMULATOR"
+
+          # Boot the simulator
+          xcrun simctl boot "$SIMULATOR" || true
+
+          # Wait for simulator to be ready
+          sleep 10
+
+          # Run tests on iOS simulator
+          swift test -Xswiftc -sdk -Xswiftc $(xcrun --sdk iphonesimulator --show-sdk-path) -Xswiftc -target -Xswiftc arm64-apple-ios13.0-simulator --verbose
+
+      - name: Run specific iOS test groups
+        run: |
+          swift test -Xswiftc -sdk -Xswiftc $(xcrun --sdk iphonesimulator --show-sdk-path) -Xswiftc -target -Xswiftc arm64-apple-ios13.0-simulator --filter CoreTests
+          swift test -Xswiftc -sdk -Xswiftc $(xcrun --sdk iphonesimulator --show-sdk-path) -Xswiftc -target -Xswiftc arm64-apple-ios13.0-simulator --filter ExtensionsTests
+          swift test -Xswiftc -sdk -Xswiftc $(xcrun --sdk iphonesimulator --show-sdk-path) -Xswiftc -target -Xswiftc arm64-apple-ios13.0-simulator --filter ErrorHandlingTests
+
   # Test on Linux (Ubuntu)
   test-linux:
     name: Linux (Ubuntu 24.04, Swift ${{ matrix.swift-version }})
@@ -275,6 +328,44 @@ jobs:
 
       - name: Build CLI tool
         run: swift build -c ${{ matrix.configuration }} --product SwiftZlibCLI
+
+  # Build verification - iOS
+  build-verification-ios:
+    name: Build Verification (iOS, Swift ${{ matrix.swift-version }}, ${{ matrix.configuration }})
+    strategy:
+      matrix:
+        configuration: [debug, release]
+        swift-version: [5.9, 6.1.2]
+    runs-on: macos-14
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup environment (iOS)
+        run: sudo xcode-select -switch /Applications/Xcode_15.2.app
+
+      - name: Install Swift ${{ matrix.swift-version }}
+        uses: SwiftyLab/setup-swift@v1
+        with:
+          swift-version: ${{ matrix.swift-version }}
+
+      - name: Build package for iOS
+        run: swift build -c ${{ matrix.configuration }} -Xswiftc -sdk -Xswiftc $(xcrun --sdk iphonesimulator --show-sdk-path) -Xswiftc -target -Xswiftc arm64-apple-ios13.0-simulator
+
+      - name: Test package on iOS Simulator
+        run: |
+          # Get the first available iPhone simulator
+          SIMULATOR=$(xcrun simctl list devices available | grep "iPhone" | head -1 | sed 's/.*(\([^)]*\)).*/\1/')
+          echo "Using simulator: $SIMULATOR"
+
+          # Boot the simulator
+          xcrun simctl boot "$SIMULATOR" || true
+
+          # Wait for simulator to be ready
+          sleep 10
+
+          # Run tests on iOS simulator
+          swift test -c ${{ matrix.configuration }} -Xswiftc -sdk -Xswiftc $(xcrun --sdk iphonesimulator --show-sdk-path) -Xswiftc -target -Xswiftc arm64-apple-ios13.0-simulator
 
   # Build verification - Linux
   build-verification-linux:
