fix: avoid double 'v' in release notes heading

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
 
           # Generate release notes
           cat << EOF > release_notes.md
-          # SwiftZlib v$VERSION
+          # SwiftZlib ${VERSION}
 
           ## What's Changed
 
@@ -77,11 +77,11 @@ jobs:
 
           ## Installation
 
-          \`\`\`swift
+          ```swift
           dependencies: [
               .package(url: "https://github.com/Kosikowski/swift-zlib.git", from: "$VERSION")
           ]
-          \`\`\`
+          ```
 
           ## Breaking Changes
 
@@ -89,9 +89,9 @@ jobs:
 
           ## Recent Commits
 
-          \`\`\`
+          ```
           $COMMITS
-          \`\`\`
+          ```
           EOF
 
           echo "notes<<EOF" >> $GITHUB_OUTPUT
