fix: use escaped triple backticks in release notes heredoc for correct YAML and shell parsing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,11 +77,11 @@ jobs:
 
           ## Installation
 
-          ```swift
+          \`\`\`swift
           dependencies: [
               .package(url: "https://github.com/Kosikowski/swift-zlib.git", from: "$VERSION")
           ]
-          ```
+          \`\`\`
 
           ## Breaking Changes
 
@@ -89,9 +89,9 @@ jobs:
 
           ## Recent Commits
 
-          ```
+          \`\`\`
           $COMMITS
-          ```
+          \`\`\`
           EOF
 
           echo "notes<<EOF" >> $GITHUB_OUTPUT
