fix: avoid double 'v' in release notes heading (#10)
* fix: avoid double 'v' in release notes heading

* fix: use escaped triple backticks in release notes heredoc for correct YAML and shell parsing

---------

Co-authored-by: Kosikowski <8352262+Kosikowski@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
 
           # Generate release notes
           cat << EOF > release_notes.md
-          # SwiftZlib v$VERSION
+          # SwiftZlib ${VERSION}
 
           ## What's Changed
 
