Add allTests properties and pre-commit hook for test discovery
- Add missing allTests properties to all XCTestCase subclasses
- Create Python script to check allTests coverage (scripts/check_alltests.py)
- Add pre-commit hook to enforce allTests compliance
- Fix broken python3 symlink for reliable pre-commit execution
- Ensure Linux test discovery compatibility for Swift Package Manager

[scripts] Fix trailing whitespace and end-of-file issues

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -67,3 +67,13 @@ repos:
               doc/|
               \.github/
           )$
+
+  # Custom hooks
+  - repo: local
+    hooks:
+      - id: check-alltests
+        name: Check allTests properties
+        entry: python3 scripts/check_alltests.py
+        language: system
+        files: Tests/SwiftZlibTests/.*\.swift$
+        pass_filenames: false
